Added overloaded methods for storeNotificationMessageFor